blueGreen/nginx/green-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-virtual-host-ingress-green
spec:
  rules:
  - host: nginx.kilo-bravo.demo.red-chesterfield.com
    http:
      paths:
      - backend:
          serviceName: green-nginx-service
          servicePort: 8080
